# home

./: .gitignore  README.md  go.mod  go.sum  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/api-server/: main.go  project.json
apps/api-server-py/: project.json  pyproject.toml
apps/api-server-py/api_server_py/: main.py
apps/app-server-ts/: jest.config.ts  project.json
apps/app-server-ts/src/: main.ts
apps/tags/: main.go  project.json
apps/tags-py/: project.json  pyproject.toml
apps/tags-py/tags_py/: main.py
apps/tags-ts/: jest.config.ts  project.json
apps/tags-ts/src/: main.ts
libs/proto/: Makefile  pyproject.toml
libs/proto/proto/: tags.proto
libs/proto/proto_go/: go.mod  project.json  tags.pb.go  tags_grpc.pb.go
libs/proto/proto_python/: __init__.pyi  tags_pb2.py  tags_pb2.pyi  tags_pb2_grpc.py
libs/proto/proto_typescript/: tags.ts
load_testing/: locustfile.py
