[tool.poetry]
name = "api-server-py"
version = "0.1.0"
description = ""
authors = ["Sebastian Banaszkiewicz"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
home_proto = {path="../../libs/proto"}
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
